--- a/contents.css
+++ b/contents.css
@@ -92,13 +92,15 @@ ul {
     min-height: 135px;
 }
 
-.line-img {
-    height: 100%;
-    border-left: 1px solid #d8d8d8;
+.card-ultimaslojas {
+    border: 1px solid #d8d8d8;
+    border-radius: 3px;
 }
 
 .contents-cards {
-    margin-left: 25px;
+    border-left: 1px solid #d8d8d8;
+    padding-left: 15px;
+    height: 85px;
 }
 
 .gratis {
@@ -113,7 +115,10 @@ ul {
 
 .cards-restaurant {
     font-weight: 300;
+    font-size: 0.875rem;
+    line-height: 1.0625rem;
     color: #717171;
+    margin-top: 15px;
 }
 
 .restaurante-figure:hover {
@@ -125,6 +130,7 @@ ul {
     border-radius: 80px;
     width: 85px;
     height: 85px;
+    max-width: 90px;
     margin-right: 20px;
 }
 
