--- a/owl-carousel.css
+++ b/owl-carousel.css
@@ -1,15 +1,18 @@
 .owl-prev,
 .owl-next {
-    width: 15px;
-    height: 50px;
     position: absolute;
-    top: 20%;
-    display: block !important;
-    border: 1px solid black;
+    top: 50%;
+    transform: translateY(-50%);
+    -webkit-transform: translateY(-50%);
+    border: 1px solid #000;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
 }
 
 .owl-prev {
     left: -20px;
+    display: flex;
 }
 
 .owl-carousel .owl-nav button.owl-next,
@@ -20,7 +23,7 @@
     width: 39px;
     height: 39px;
     z-index: 1;
-    background-color: white;
+    background: white;
 }
 
 
@@ -35,6 +38,7 @@
 
 .owl-next {
     right: -20px;
+    display: flex;
 }
 
 .owl-prev i,
