--- a/footer.css
+++ b/footer.css
@@ -17,12 +17,12 @@
     margin: 0 20px;
 }
 
-.footer__subtitle {
-    font-weight: 500;
-    font-size: 1rem;
+.footer__subtitle h3 {
+    font-weight: 600;
+    font-size: 1.25rem;
     line-height: 1.22;
     margin-top: 0;
-    margin-bottom: 30px;
+    margin-bottom: 25px;
     color: #3e3e3e;
 }
 
@@ -41,7 +41,7 @@
 }
 
 .footer-contents ul {
-    padding-top: 15px;
+    padding-top: 10px;
 }
 
 .footer-icon {
@@ -58,4 +58,13 @@
 
 .footer-termos {
     padding-left: 15px;
+}
+
+.footer-text {
+    letter-spacing: -1px;
+    font-size: 1.25rem;
+    color: #3e3e3e;
+    margin-bottom: 24px;
+    font-weight: 500;
+    margin-top: 0;
 }
